changes done in all api for user side